--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -22,7 +22,7 @@ jobs:
           - model: OP-ACE-3-PRO
             soc: pineapple
             branch: oneplus/sm8650
-            manifest: oneplus12_voneplus_ace3_pro_v.xml
+            manifest: oneplus_ace3_pro_v.xml
             android_version: android14
             kernel_version: "6.1"
     uses: ./.github/workflows/build.yml
